--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ astroid==1.6.6
 atomicwrites==1.4.1
 attrs==21.4.0
 backports.functools-lru-cache==1.6.4
+BeautifulSoup==3.2.2
+beautifulsoup4==4.9.3
 certifi==2021.10.8
 chardet==4.0.0
 CodeIntel==0.9.3
@@ -48,6 +50,7 @@ scandir==1.10.0
 SecretStorage==2.3.1
 singledispatch==3.7.0
 six==1.16.0
+soupsieve==1.9.6
 stevedore==1.32.0
 subprocess32==3.5.4
 typing==3.10.0.0
