--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,32 @@
-asn1crypto==0.24.0
-astroid==1.6.6
-atomicwrites==1.4.1
-attrs==21.4.0
-backports.functools-lru-cache==1.6.4
-BeautifulSoup==3.2.2
-beautifulsoup4==4.9.3
-certifi==2021.10.8
-chardet==4.0.0
-CodeIntel==0.9.3
-configparser==4.0.2
-contextlib2==0.6.0.post1
-cryptography==2.1.4
-Django==1.11.10
-enum34==1.1.10
-funcsigs==1.0.2
-futures==3.4.0
-idna==2.10
-ikpdb==1.2.3
-importlib-metadata==2.1.3
-Inflector==2.0.12
-ipaddress==1.0.17
-isort==4.3.21
-jedi==0.11.1
-keyring==10.6.0
-keyrings.alt==3.0
-lazy-object-proxy==1.6.0
-mccabe==0.6.1
-mock==3.0.5
-more-itertools==5.0.0
-packaging==20.9
-parso==0.1.1
-pathlib2==2.3.7.post1
-pbr==5.11.1
-pluggy==0.13.1
-py==1.11.0
-pycrypto==2.6.1
-pygobject==3.26.1
-pylint==1.8.1
-pylint-django==0.8.0
-pylint-flask==0.5
-pylint-plugin-utils==0.6
-pyparsing==2.4.7
-pytest==4.6.11
-pytest-mock==2.0.0
-pytz==2022.7.1
-pyxdg==0.25
-requests==2.27.1
-scandir==1.10.0
-SecretStorage==2.3.1
-singledispatch==3.7.0
+argcomplete==3.0.8
+beautifulsoup4==4.12.2
+boto3==1.26.121
+botocore==1.29.121
+certifi==2022.12.7
+cfn-flip==1.3.0
+charset-normalizer==3.1.0
+click==8.1.3
+durationpy==0.5
+hjson==3.1.0
+idna==3.4
+importlib-metadata==6.6.0
+jmespath==1.0.1
+kappa==0.6.0
+MarkupSafe==2.1.2
+placebo==0.9.0
+python-dateutil==2.8.2
+python-slugify==8.0.1
+PyYAML==6.0
+requests==2.29.0
+s3transfer==0.6.0
 six==1.16.0
-soupsieve==1.9.6
-stevedore==1.32.0
-subprocess32==3.5.4
-typing==3.10.0.0
-urllib3==1.26.14
-virtualenv==16.2.0
-virtualenv-clone==0.5.7
-virtualenvwrapper==4.8.4
-wcwidth==0.2.6
-wrapt==1.14.1
-zipp==1.2.0
-zope.cachedescriptors==4.4
+soupsieve==2.4.1
+text-unidecode==1.3
+toml==0.10.2
+tqdm==4.65.0
+troposphere==4.3.2
+urllib3==1.26.15
+Werkzeug==2.3.0
+zapp==0.0.7
+zappa==0.56.1
+zipp==3.15.0
