--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,12 +25,15 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install virtualenv and execute pytest
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          sudo apt install virtualenv
+          virtualenv -p python3 env 
+          source env/bin/activate
+          pip install -r requirements.txt
+          pytest
+      
+      - name: Execute flake8 test
+        run: |
+          flake8 scraping.py
+          flake8 beatifulsoup.py
