--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,10 +26,12 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install virtualenv and execute pytest
-        run: |
+        run: |          
+          sudo apt install virtualenv
+          virtualenv -p python3 env 
+          source env/bin/activate
           pip install -r requirements.txt
-          pytest
-      
+          
       - name: Execute flake8 test
         run: |
           flake8 scraping.py
