--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,5 +34,6 @@ jobs:
           
       - name: Execute flake8 test
         run: |
+          pip install flake8
           flake8 scraping.py
           flake8 beatifulsoup.py
